Authority/sfdc/force-app/main/default/objects/Agent__c/Agent__c.object-meta.xml
<CustomObject>
    <label>Agent</label>
    <nameField>
        <label>Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>