Authority/sfdc/force-app/main/default/objects/Agent__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <referenceTo>Agency__c</referenceTo>
    <relationshipName>Agencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>