Authority/sfdc/force-app/main/default/objects/Agent__c/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Agent Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>