Authority/sfdc/force-app/main/default/objects/Agent__c/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <externalId>true</externalId>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>