Authority/sfdc/force-app/main/default/objects/Agent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>Instance__c</columns>
    <columns>Agent_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>